--- a/test.html
+++ b/test.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<title></title>
+<title>test</title>
 <head></head>
+
 <body>
   
   
-  <span>write some words</span>
+<span>write some words</span>
   
   
 </body>
